<resources>
    <string name="app_name">B Pal Application</string>
    <string name="login_with_personal_credentials">Login with personal credentials!</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="b_pal">B.Pal</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_have_successfully_logged_in_b.pal">You have successfully\nlogged in B.Pal</string>
    <string name="lets_create_b_pal_profile">Let\'s create B.Pal profile!</string>
    <string name="create_profile">Create profile</string>
    <string name="name">Name</string>
    <string name="aalok_dekhane">Aalok Dekhane</string>
    <string name="birthday">Birthday</string>
    <string name="_01_01_1976">01/01/1976</string>
    <string name="age">Age</string>
    <string name="_41">41</string>
    <string name="interest">Interests</string>
    <string name="tech_related">(Tech Related)</string>
    <string name="hobbies">(Hobbies)</string>
    <string name="about_yourself">About yourself</string>
    <string name="max_30_words">(Max 30 words)</string>
    <string name="skip">Skip</string>
    <string name="submit">Submit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="quiz">Quiz</string>
    <string name="my_feedback">My Feedback</string>
    <string name="saved_posts_and_ads">Saved Posts &amp; Ads</string>
    <string name="settings">Settings</string>
    <string name="assist">Assist</string>
    <string name="logout">Logout</string>
    <string name="refine_your_interest">Refine Your Interests</string>
    <string name="most_trending">Most Trending</string>
    <string name="most_recent">Most Recent</string>
    <string name="travel">Travel</string>
    <string name="food">Food</string>
    <string name="fitness_and_wellness">Fitness &amp; Wellness</string>
    <string name="technology">Technology</string>
    <string name="party">Party</string>
    <string name="title_activity_ashich">AshichActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="_24_percent">24 %</string>
    <string name="complete">Complete</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="whats_up">What\'s Up?</string>
    <string name="subject">Subject</string>
    <string name="related_keywords">Related Keywords</string>
    <string name="compose">Compose</string>
    <string name="write_something">Write something...</string>
    <string name="QUIZ">QUIZ:</string>
    <string name="_17_july_2017">" "17july 2017</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="email">Email:</string>
    <string name="mobile">Mobile:</string>
    <string name="interests">Interests:</string>
    <string name="more">" "more..</string>
    <string name="media_by_you">Media by you</string>
    <string name="posts_by_you">Posts by you</string>
    <string name="tell_us_more">Tell us more...</string>
    <string name="call">Call</string>
    <string name="save">Save</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="today">Today</string>
    <string name="_assist">Assist</string>
    <string name="comming_week">Coming Week</string>
    <string name="more_tech_bites">More Tech Bites</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="business">Business</string>
    <string name="self_help">Self Help</string>
    <string name="design">Design</string>
    <string name="finance">Finance</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="appliances">Appliances</string>
    <string name="electronics">Electronics</string>
    <string name="automobile">Automobile</string>
    <string name="home_decor">Home decor</string>
    <string name="furniture">Furniture</string>
    <string name="mobile_phones">Mobile Phones</string>
    <string name="laptop_computers">Laptop Computers</string>
    <string name="stationary">Stationary</string>
    <string name="cultural">Cultural</string>
    <string name="informative">Informative</string>
    <string name="creativity">Creativity</string>
    <string name="social">Social</string>
    <string name="sports">Sports</string>
    <string name="post_ad">Post Ad</string>
    <string name="buyer">Buyer</string>
    <string name="seller">Seller</string>
    <string name="contact_no">Contact No.</string>
    <string name="you_showed_interest">You showed interest!</string>
    <string name="we_would_like_to_share_your_contact_details_with_the_seller">We would like to share your contact details with the seller</string>
    <string name="okay">Okay!</string>
    <string name="product_description">Product Description :</string>
    <string name="responses">Responses :</string>
    <string name="save_ad">Save Ad</string>
    <string name="interested">Interested ?</string>
    <string name="ad_saved_successfully">Ad Saved Successfully!</string>
    <string name="events_on">Events on</string>
    <string name="calender">Calender</string>
    <string name="remove_from_calender">Remove from Calender</string>
    <string name="you_are_attending_this_event">You are attending this event!</string>
    <string name="you_can_remove_this_event_from_calender_by_using_calender_view">you can remove this event from calender by using calender view! </string>
    <string name="people_attending_event">People attending event: </string>
    <string name="to_attend">To attend </string>
    <array name="location">
        <item>Location</item>
        <item>Pune - 2</item>
        <item>Pune - 3</item>
    </array>
    <array name="work_experience">
        <item>Less than a year</item>
        <item>0 to 3 Years</item>
        <item>3 to 6 Years</item>
        <item>6 to 9 Years</item>
        <item>9 to 12ears</item>
        <item>More than 2 Years</item>
    </array>
</resources>
