<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/group_home">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home" />
    </group>

    <group android:id="@+id/group_profile">
        <item
            android:id="@+id/nav_profile"
            app:actionLayout="@layout/text_view"
            android:title="@string/profile"/>
    </group>

    <group android:id="@+id/group_quiz">
        <item
            android:id="@+id/nav_quiz"
            android:title="@string/quiz"
            android:actionLayout="@layout/circle_view_left_drawer_layout"/>
    </group>

    <group android:id="@+id/group_feedback">
        <item
            android:id="@+id/nav_my_feedback"
            android:title="@string/my_feedback"
            android:actionLayout="@layout/circle_view_left_drawer_layout"/>
    </group>

    <group android:id="@+id/group_saved_post_and_ads">
        <item
            android:id="@+id/nav_saved_posts_and_ads"
            android:title="@string/saved_posts_and_ads"
            android:actionLayout="@layout/circle_view_left_drawer_layout"/>
    </group>

    <group android:id="@+id/group_settings">
        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings" />
    </group>

    <group android:id="@+id/group_assist">
        <item
            android:id="@+id/nav_assist"
            android:title="@string/assist" />
    </group>

    <group android:id="@+id/group_logout">
        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout" />
    </group>

</menu>