<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bynry.bpal.ui.activities.StartDiscussionActivity">

        <RelativeLayout
            android:id="@+id/layout_upper"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentTop="true"
            android:background="@drawable/ic_action_background_profile" >

            <ImageView
                android:id="@+id/img_back_arrow"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginVertical="20dp"
                android:layout_marginHorizontal="10dp"
                android:src="@drawable/ic_action_back_arrow" />

            <TextView
                android:id="@+id/txt_attach"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginVertical="20dp"
                android:layout_marginTop="2dp"
                android:text="@string/whats_up"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_toRightOf="@+id/img_back_arrow"/>

            <ImageView
                android:id="@+id/img_attach"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_action_attach_white"
                android:layout_marginRight="15dp"
                android:layout_marginVertical="20dp" />

        </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/layout_upper" >

        <EditText
            android:id="@+id/edt_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subject"
            android:textColor="@color/edit_text_whats_up"
            android:layout_marginTop="5dp"/>

        <EditText
            android:id="@+id/edt_related_keywords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/related_keywords"
            android:textColor="@color/edit_text_whats_up"
            android:layout_marginTop="5dp"/>

        <EditText
            android:id="@+id/edt_compose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/compose"
            android:textColor="@color/edit_text_whats_up"
            android:layout_marginTop="5dp"
            android:maxLines="5"/>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/color_create_profile_btn"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:layout_gravity="right"
            android:textColor="@color/white" />

    </LinearLayout>

</RelativeLayout>
