<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginBottom="60dp">

    <TextView
        android:id="@+id/txt_refine_your_interest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/refine_your_interest"
        android:textColor="@color/right_navigation_text_color_"
        android:textSize="17sp"
        android:layout_marginLeft="10dp"
        android:layout_marginVertical="10dp"
        android:fontFamily="@font/sfns_display_medium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="10dp"
        android:layout_marginLeft="15dp">

        <CheckBox
            android:id="@+id/chk_most_trending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/color_create_profile_btn"
            android:checked="true" />

        <TextView
            android:id="@+id/txt_most_trending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/most_trending"
            android:layout_marginLeft="7dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="10dp"
        android:layout_marginLeft="15dp">

        <CheckBox
            android:id="@+id/chk_most_recent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/color_create_profile_btn"
            android:checked="true" />

        <TextView
            android:id="@+id/txt_most_recent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/most_recent"
            android:layout_marginLeft="7dp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/edit_text_line_color"
        android:layout_marginVertical="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="10dp"
        android:layout_marginLeft="15dp">

        <CheckBox
            android:id="@+id/chk_travel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/color_create_profile_btn"
            android:checked="true" />

        <TextView
            android:id="@+id/txt_travel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/travel"
            android:layout_marginLeft="7dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="10dp"
        android:layout_marginLeft="15dp">

        <CheckBox
            android:id="@+id/chk_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/color_create_profile_btn"
            android:checked="true" />

        <TextView
            android:id="@+id/txt_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food"
            android:layout_marginLeft="7dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="10dp"
        android:layout_marginLeft="15dp">

        <CheckBox
            android:id="@+id/chk_fitness_and_wellness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/color_create_profile_btn"
            android:checked="true" />

        <TextView
            android:id="@+id/txt_fitness_and_wellness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fitness_and_wellness"
            android:layout_marginLeft="7dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="10dp"
        android:layout_marginLeft="15dp">

        <CheckBox
            android:id="@+id/chk_technology"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/color_create_profile_btn"
            android:checked="true" />

        <TextView
            android:id="@+id/txt_technology"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/technology"
            android:layout_marginLeft="7dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="10dp"
        android:layout_marginLeft="15dp">

        <CheckBox
            android:id="@+id/chk_party"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/color_create_profile_btn"
            android:checked="true" />

        <TextView
            android:id="@+id/txt_party"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/party"
            android:layout_marginLeft="7dp"/>

    </LinearLayout>

</LinearLayout>