<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_nav_right_connect"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginBottom="60dp">

    <TextView
        android:id="@+id/txt_refine_your_interest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/refine_your_interest"
        android:textColor="@color/right_navigation_text_color_"
        android:textSize="17sp"
        android:layout_marginLeft="10dp"
        android:layout_marginVertical="10dp"
        android:fontFamily="@font/sfns_display_medium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="10dp"
        android:layout_marginLeft="15dp">

        <CheckBox
            android:id="@+id/chk_cultural"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/color_create_profile_btn"
            android:checked="true" />

        <TextView
            android:id="@+id/txt_cultural"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cultural"
            android:layout_marginLeft="7dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="10dp"
        android:layout_marginLeft="15dp">

        <CheckBox
            android:id="@+id/chk_informative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/color_create_profile_btn"
            android:checked="true" />

        <TextView
            android:id="@+id/txt_informative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/informative"
            android:layout_marginLeft="7dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="10dp"
        android:layout_marginLeft="15dp">

        <CheckBox
            android:id="@+id/chk_creativity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/color_create_profile_btn"
            android:checked="true" />

        <TextView
            android:id="@+id/txt_creativity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creativity"
            android:layout_marginLeft="7dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="10dp"
        android:layout_marginLeft="15dp">

        <CheckBox
            android:id="@+id/chk_social"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/color_create_profile_btn"
            android:checked="true" />

        <TextView
            android:id="@+id/txt_social"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/social"
            android:layout_marginLeft="7dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="10dp"
        android:layout_marginLeft="15dp">

        <CheckBox
            android:id="@+id/chk_sports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/color_create_profile_btn"
            android:checked="true" />

        <TextView
            android:id="@+id/txt_sports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sports"
            android:layout_marginLeft="7dp"/>

    </LinearLayout>

</LinearLayout>
