<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp">

        <ImageView
            android:id="@+id/img_close_attending_dialog"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_action_close_orange" />

        <ImageView
            android:id="@+id/img_interested_flag"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/img_close_attending_dialog"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_action_attending_fill_orange" />

        <TextView
            android:id="@+id/txt_you_showed_interest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_interested_flag"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sfns_text_medium"
            android:text="@string/you_are_attending_this_event"
            android:textColor="@color/right_navigation_text_color_"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_you_showed_interest_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_you_showed_interest"
            android:fontFamily="@font/sfns_text_medium"
            android:gravity="center"
            android:text="@string/you_can_remove_this_event_from_calender_by_using_calender_view"
            android:textColor="@color/right_navigation_text_color_" />

        <Button
            android:id="@+id/btn_okay"
            android:layout_width="180dp"
            android:layout_height="55dp"
            android:layout_below="@id/txt_you_showed_interest_text"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@color/color_create_profile_btn"
            android:text="@string/okay"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </RelativeLayout>

</RelativeLayout>